--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,3 +1,143 @@
 /* Your styles go here */
 @import url("bootstrap/dist/css/bootstrap.min.css");
 @import url("bootstrap-icons/font/bootstrap-icons.css");
+
+body {
+    background-color: rgb(73, 73, 73);
+}
+
+.navbar {
+    background-color: rgb(73, 73, 73);
+}
+
+#titleppp {
+    color: gold;
+    font-weight: bold;
+}
+
+.jumbotron {
+    font-weight: bold;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-top: 100px;
+    padding-bottom: 200px;
+    background-image: url("https://plus.unsplash.com/premium_photo-1687991219973-b601bafdf916?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTN8fHZpZGVvJTIwZ2FtZSUyMGNhc2V8ZW58MHx8MHx8fDA%3D");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+}
+
+.mapintro {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    margin-left: 10%;
+    margin-right: 55%;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 20px;
+}
+
+.article {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.map {
+    border-radius: 20px;
+    border: 5px solid #000000;
+}
+
+.pointsone{
+    position: absolute;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.pointstwo{
+    position: absolute;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    top: 40%;
+    left: 35%;
+    width: 50px;
+    height: 50px;
+}
+
+.pointsthree{
+    position: absolute;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    top: 55%;
+    left: 60%;
+    width: 50px;
+    height: 50px;
+}
+
+.planet-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+#news {
+    margin-top: 100px;
+    margin-bottom: 10px;
+    margin-left: 25%;
+}
+
+#newsD {
+    text-align: center;
+    margin-top: 10px;
+    padding: 15px;
+    margin-left: 20%;
+    margin-right: 20%;
+    background-color: #a8a8a8;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 50%;
+}
+
+.abt {
+    text-align: center;
+    background-color: #5f5f5f;
+    border-radius: 30px;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.abt p {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.map {
+    width: 600px;
+    height: 450px;
+    display: block;
+}
+
+.planet-container {
+    width: 600px;
+    height: 450px;
+    margin: auto;
+}
